<?xml version="1.0"?>
<package format="2">
  <name>dataset2rosbag</name>
  <version>0.0.1</version>
  <description>The dataset2rosbag package</description>

  <maintainer email="kheo1772@gmail.com">harderthan</maintainer>
  <author email="kheo1772@gmail.com">harderthan</author>

  <url type="github">https://github.com/harderthan/dataset2rosbag</url>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
